Fix Firefox scrollbar

--- a/components/threading/global_threads/thread_pane/thread_pane.scss
+++ b/components/threading/global_threads/thread_pane/thread_pane.scss
@@ -3,6 +3,8 @@
     display: grid;
     overflow: hidden;
     margin-right: 5px;
+    scrollbar-color: var(--center-channel-color-32) #fff0;
+    scrollbar-width: thin;
     grid-template-areas:
         'header'
         'pane';
